# wfs-explorer

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build-imgui.sh  build-mingw.sh  mainwindow.h  toolchain-mingw.cmake  ui-preview.html  vcpkg.json  wfs_wrapper.h
.github/workflows/: build.yml  release.yml
imgui/src/: app.cpp  app.h  i18n.cpp  i18n.h  main.cpp  wfs_wrapper.cpp  wfs_wrapper.h
src/: main.cpp  mainwindow.cpp  wfs_wrapper.cpp
